--- a/LibraryManagementSystem.UI/appsettings.json
+++ b/LibraryManagementSystem.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryManagementSystem;Integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=false"
+    "DefaultConnection": "Server=.;Database=LibraryManagementSystem;Integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
