--- a/LibraryManagementSystem.UI/appsettings.json
+++ b/LibraryManagementSystem.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=LibraryManagementSystem;Integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets=true;Encrypt=false"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryManagementSystem;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -25,5 +25,14 @@
     "LibraryName": "مكتبة الجامعة المركزية - Central University Library",
     "ContactEmail": "library@university.edu",
     "ContactPhone": "+966-11-1234567"
+  },
+  "JwtSettings": {
+    "SecretKey": "LibraryManagementSystem_SuperSecretKey_2024_ForJWTTokenGeneration_MustBe256BitsOrMore",
+    "Issuer": "LibraryManagementSystem",
+    "Audience": "LibraryManagementSystem.Users",
+    "ExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7,
+    "AllowRememberMe": true,
+    "RememberMeDays": 30
   }
 }
