--- a/LibraryManagementSystem.UI/appsettings.json
+++ b/LibraryManagementSystem.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=LibraryManagementSystem;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LibraryManagementSystem;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
