--- a/LibraryManagementSystem.UI/appsettings.json
+++ b/LibraryManagementSystem.UI/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=LibraryManagementSystem;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    //"DefaultConnection": "Server=localhost;Database=LibraryManagementSystem;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
+    "DefaultConnection": "Server=LibraryManagementSystem.mssql.somee.com;packet size=4096;user id=Bahaa_SQLLogin_1;password=qhlnv2euhp;Database=LibraryManagementSystem;Encrypt=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+
   },
   "Logging": {
     "LogLevel": {
