--- a/LibraryManagementSystem.UI/appsettings.json
+++ b/LibraryManagementSystem.UI/appsettings.json
@@ -25,8 +25,8 @@
     "MaxRenewalCount": 2,
     "RenewalDays": 14,
     "LibraryName": "مكتبة الجامعة المركزية - Central University Library",
-    "ContactEmail": "library@university.edu",
-    "ContactPhone": "+966-11-1234567"
+    "ContactEmail": "bahaa.ebraheem812@gmail.com",
+    "ContactPhone": "+963991640012"
   },
   "JwtSettings": {
     "SecretKey": "LibraryManagementSystem_SuperSecretKey_2024_ForJWTTokenGeneration_MustBe256BitsOrMore",
